# MyMusicPlayer

./: Readme.md  build.bat
resource/: style_black.qss  style_white.qss
src/: CMakeLists.txt  Common.cpp  Common.h  ControlBar.cpp  ControlBar.h  DataStruct.h  LyricBar.cpp  LyricBar.h  LyricTableWidget.cpp  LyricTableWidget.h  MusicList.cpp  MusicList.h  MyMusicPlayer.pro  PlayerAnimation.cpp  PlayerAnimation.h  SearchBar.cpp  SearchBar.h  VolumeControlBar.cpp  VolumeControlBar.h  main.cpp  mainwindow.cpp  mainwindow.h  resource.qrc  zh_CN.ts  zh_EN.ts
src/HeaderBar/: HeaderBar.cpp  HeaderBar.h  HeaderBar.pri
src/MyWidget/: MyWidget.cpp  MyWidget.h  MyWidget.pri
src/icon/: Thumbs.db
